# pqfetch

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SUPPORT.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: main.rs
